# crystalize

./: .clang-format  CMakeLists.txt  README.md
spec/: schema_spec.cpp
src/: config.c  config.h  crystalize.c  crystalize.h  encode.c  encode.h  encoder.h  encoder_decode.c  encoder_encode.c  hash.c  hash.h  writer.c  writer.h
